--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="estilo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;700&display=swap" rel="stylesheet">
+
+
+    <title>Cuadros de Velazquez</title>
 </head>
 <body>
-    <h1>Cuadros de Velazquez</h1>
+
+    <header>
+        <h1>Cuadros de Velazquez</h1>
+    </header>
+
 
 </body>
 </html>
