--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="estilo.css">
+    <link href="estilo.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,34 @@
 <body>
 
     <header>
-        <h1>Cuadros de Velazquez</h1>
+        <p>Cuadros de Velazquez</p>
     </header>
+
+    <section class="menu-izquierda">
+        
+        <div>
+            <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen">
+        </div>
+        <div>
+            <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen">
+        </div>
+        <div>
+            <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen">
+        </div>
+        <div>
+            <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen">
+        </div>
+        <div>
+            <img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen">
+        </div>
+
+    </section>
+
+    <section class="imagen-grande" >
+        <div>
+            <img src="imagenes/breda.jpg" alt="breda">
+        </div>
+    </section>
 
 
 </body>
