Colocación de la página

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <p>Cuadros de Velazquez</p>
     </header>
-
+<div>
     <section class="menu-izquierda">
         
         <div>
@@ -37,12 +37,23 @@
 
     </section>
 
-    <section class="imagen-grande" >
+    <section class="bloque-imagen" >
         <div>
-            <img src="imagenes/breda.jpg" alt="breda">
+            <img src="imagenes/breda.jpg" alt="breda" class="imagen-grande">
         </div>
     </section>
 
+    <section class="derecha">
+
+        <h1 class="texto-derecha" id="titulo">RENDICIÓN DE BREDA</h1>
+        <p class="texto-derecha" id="año">1634-35</p>
+        <p class="texto-derecha" id="precio"><strong>380€</strong></p>
+        <p class="texto-derecha" id="descripcion">Replica del cuadro en colores originales y tamaño 150 x 80cm</p>
+        <button class="texto-derecha" id="boton">COMPRAR</button>
+
+    </section>
+
+</div>
 
 </body>
 </html>
