--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="menu-izquierda">
         
         <div>
-            <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen">
+            <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen-actual">
         </div>
         <div>
             <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen">
