--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     </header>
 <div>
     <section class="menu-izquierda">
-        
+
         <div>
-            <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen-actual">
+            <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen">
         </div>
         <div>
-            <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen">
+            <a href="index2.html"> <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen">
+            <a href="index3.html"> <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen">
+            <a href="index4.html"> <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen">
+            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen-actual"> </a>
         </div>
 
     </section>
