--- a/index2.html
+++ b/index2.html
@@ -20,26 +20,26 @@
     <section class="menu-izquierda">
 
         <div>
-            <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen">
+            <a href="index.html"> <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen-actual">
+            <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen">
         </div>
         <div>
-            <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen">
+            <a href="index3.html"> <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen">
+            <a href="index4.html"> <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen">
+            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen-actual"> </a>
         </div>
 
     </section>
 
     <section class="bloque-imagen" >
         <div>
-            <img src="imagenes/breda.jpg" alt="breda" class="imagen-grande">
+            <img src="imagenes/venus.jpg" alt="venus" class="imagen-grande">
         </div>
     </section>
 
