--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
             <a href="index.html"> <img src="imagenes/breda-mini.jpg" alt="breda" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen">
+            <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen-actual">
         </div>
         <div>
             <a href="index3.html"> <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen"> </a>
@@ -32,7 +32,7 @@
             <a href="index4.html"> <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen"> </a>
         </div>
         <div>
-            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen-actual"> </a>
+            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen"> </a>
         </div>
 
     </section>
