--- a/index3.html
+++ b/index3.html
@@ -26,13 +26,13 @@
             <a href="index2.html"> <img src="imagenes/venus-mini.jpg" alt="venus" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen">
+            <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen-actual">
         </div>
         <div>
             <a href="index4.html"> <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen"> </a>
         </div>
         <div>
-            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen-actual"> </a>
+            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen"> </a>
         </div>
 
     </section>
