--- a/index4.html
+++ b/index4.html
@@ -29,10 +29,10 @@
             <a href="index3.html"> <img src="imagenes/meninas-mini.jpg" alt="meninas" class="imagen"> </a>
         </div>
         <div>
-            <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen">
+            <img src="imagenes/vulcano-mini.jpg" alt="vulcano" class="imagen-actual">
         </div>
         <div>
-            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen-actual"> </a>
+            <a href="index5.html"><img src="imagenes/inocencio-mini.jpg" alt="inocencio" class="imagen"> </a>
         </div>
 
     </section>
