--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
 
     <section class="bloque-imagen" >
 
-            <img src="imagenes/breda.jpg" alt="breda" class="imagen-grande" id="myImg">
-
-        <div id="popUp" class="modal">
-            <span class="close">&times;</span>
-            <img class="modal-content" id="img01" src="imagenes/breda.jpg">
-            <div id="caption"></div>
+        <div>
+            <a href="breda.html"> <img src="imagenes/breda.jpg" alt="breda" class="imagen-grande" id="myImg"> </a>
         </div>
+
     </section>
 
     <section class="derecha">
