--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
 
     <section class="bloque-imagen" >
         <div>
-            <img src="imagenes/venus.jpg" alt="venus" class="imagen-grande">
+            <a href="venus.html"> <img src="imagenes/venus.jpg" alt="venus" class="imagen-grande"> </a>
         </div>
     </section>
 
