--- a/index3.html
+++ b/index3.html
@@ -39,7 +39,7 @@
 
     <section class="bloque-imagen" >
         <div>
-            <img src="imagenes/meninas.jpg" alt="meninas" class="imagen-grande">
+            <a href="meninas.html"> <img src="imagenes/meninas.jpg" alt="meninas" class="imagen-grande"></a>
         </div>
     </section>
 
