--- a/index4.html
+++ b/index4.html
@@ -39,7 +39,7 @@
 
     <section class="bloque-imagen" >
         <div>
-            <img src="imagenes/vulcano.jpg" alt="vulcano" class="imagen-grande">
+            <a href="vulcano.html"> <img src="imagenes/vulcano.jpg" alt="vulcano" class="imagen-grande"> </a>
         </div>
     </section>
 
