--- a/index5.html
+++ b/index5.html
@@ -39,7 +39,7 @@
 
     <section class="bloque-imagen" >
         <div>
-            <img src="imagenes/inocencio.jpg" alt="inocencio" class="imagen-grande">
+            <a href="inocencio.html"> <img src="imagenes/inocencio.jpg" alt="inocencio" class="imagen-grande"> </a>
         </div>
     </section>
 
