--- a/inocencio.html
+++ b/inocencio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div >
-  <a href="index.html"><img src="imagenes/inocencio.jpg" alt="inocencio" ></a>
+  <a href="index5.html"><img src="imagenes/inocencio.jpg" alt="inocencio" ></a>
 </div>
 </body>
 </html>
